<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:orientation="vertical"
    tools:context=".LoginActivity">

        <EditText
            android:id="@+id/userName"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="22dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/txt_enter_contactnumber"
            android:fontFamily="sans-serif"
            android:textColor="#4e5154"
            android:inputType="phone" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="22dp"
            android:textColor="#4e5154"
            android:hint="@string/txt_enter_pass"
            android:fontFamily="sans-serif"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#4e5154"
            android:layout_marginTop="30dp"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif"
            android:textColorLink="#4e5154"
            android:text="Forget Password?" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="14dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/noteyetregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#4e5154"
            android:fontFamily="sans-serif"
            android:text="@string/txt_dont_have_account" />

        <TextView
            android:id="@+id/registerhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#4e5154"
            android:textColorLink="#4e5154"
            android:fontFamily="sans-serif"
            android:text="@string/txt_create_account" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="65dp"
        android:text="@string/txt_login"
        android:textSize="23dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="#4e5154"
        />
</LinearLayout>