<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/name"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="22dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/txt_enter_new_fullname"
        android:fontFamily="sans-serif"
        android:textColor="#4e5154"
        android:inputType="text" />

    <EditText
        android:id="@+id/mobile"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="22dp"
        android:textColor="#4e5154"
        android:hint="@string/txt_enter_contactnumber"
        android:fontFamily="sans-serif"
        android:inputType="phone" />
    <EditText
        android:id="@+id/email"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="22dp"
        android:textColor="#4e5154"
        android:hint="Enter Email"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="22dp"
        android:textColor="#4e5154"
        android:hint="@string/txt_enter_pass"
        android:fontFamily="sans-serif"
        android:inputType="textPassword" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="23dp">

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_gender"
            android:textColor="#4e5154"
            android:textSize="24dp"/>

        <Spinner
            android:id="@+id/gender_button"
            android:layout_width="160dp"
            android:layout_marginLeft="95dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/txt_register"
        android:textSize="23dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="#4e5154"
        />
</LinearLayout>