<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:orientation="vertical"
    tools:context=".ForgetPassActivity">

    <EditText
        android:id="@+id/userName"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="22dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/txt_enter_contactnumber"
        android:fontFamily="sans-serif"
        android:textColor="#4e5154"
        android:inputType="phone" />

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="22dp"
        android:textColor="#4e5154"
        android:hint="@string/txt_enter_otp"
        android:fontFamily="sans-serif"
        android:inputType="number" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:text="@string/txt_confirm_otp"
        android:textSize="23dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="#4e5154"
        />
</LinearLayout>